# util

./: .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: meta-update.yml  tests.yml
benchmark/: CMakeLists.txt  trie.cpp
cmake/: rsl-util-config.cmake.in
example/: CMakeLists.txt  assert.cpp  constexpr_assert.cpp  format.cpp  review.cpp  review_tu2.cpp  variant.cpp
example/inject/: CMakeLists.txt  injection_impl.cpp  main.cpp
include/rsl/: annotations  assert  constant_sequence  constant_wrapper  constexpr_assert  enum  expect  format  inject  intseq  kwargs  macro  meta  meta_traits  print  repr  seq  serialize  source_location  span  string_constant  string_view  tagged_variant  trie  tuple  utility  variant
include/rsl/_format_impl/: fmt_parser.hpp  parser.hpp  util.hpp
include/rsl/_impl/: _config.h  concepts.hpp  fail.hpp  hash.hpp  index_of.hpp  is_hashable.hpp  macros.hpp  member_cache.hpp  meta.hpp  operators.hpp  parser.hpp  to_string.hpp  traits.hpp  variant.hpp  wrap_iter.hpp
include/rsl/_impl/format/: accessor.hpp  fmt_parser.hpp  style.hpp
include/rsl/_impl/macro/: attributes.hpp  compiler.hpp  define_static_array.hpp  diagnostic.hpp  loop.hpp  opt.hpp  os.hpp
include/rsl/_impl/platform/: io.hpp
include/rsl/_impl/serialize/: enum.hpp  operators.hpp  to_string.hpp
include/rsl/_impl/util/: operators.hpp  to_string.hpp
include/rsl/compat/: constant_wrapper.hpp  is_within_lifetime.hpp
include/rsl/serializer/: annotations.hpp  binary.hpp  canonical_name.hpp  customization.md  machinery.hpp  name.hpp  repr.hpp  varint.hpp
include/rsl/serializer/binary/type/: common.hpp  deserializer.hpp  serializer.hpp
include/rsl/serializer/repr/: serializer.hpp
include/rsl/stream/: memory.hpp  socket.hpp  stream.hpp
include/rsl/style/: terminal.hpp
include/rsl/util/: to_string.hpp
src/: CMakeLists.txt
src/stream/: CMakeLists.txt  memory.cpp  socket.cpp
test/: CMakeLists.txt
test/common/: assertions.h  test_allocator.h  type_name.h  types.h  util.h
test/enum/: CMakeLists.txt  numeric_limits.cpp  operator.cpp  utilities.cpp
test/expect/: CMakeLists.txt  expect.cpp
test/format/: CMakeLists.txt  field_parser.cpp  format.cpp
test/kwargs/: CMakeLists.txt  capture_list.cpp  simple.cpp
test/repr/: CMakeLists.txt  canonical_name.cpp  repr.cpp
test/serializer/: CMakeLists.txt  to_owning.cpp
test/serializer/binary/: CMakeLists.txt  string.cpp  to_binary.cpp  type.cpp
test/serializer/repr/: CMakeLists.txt  rename.cpp  repr.cpp
test/serializer/to_string/: CMakeLists.txt  enum.cpp  fundamental.cpp
test/span/: CMakeLists.txt  span.cpp
test/stream/: CMakeLists.txt  memory.cpp
test/string_view/: CMakeLists.txt  string_view.cpp
test/tagged_variant/: CMakeLists.txt  access.cpp  generate.cpp  switch.cpp
test/trie/: CMakeLists.txt  trie.cpp
test/tuple/: CMakeLists.txt  assign.cpp  cntr.cpp  empty.cpp  make_tuple.cpp  structured_bindings.cpp  tie.cpp
test/tuple/extensions/: CMakeLists.txt  subscript.cpp
test/tuple/tuple.get/: CMakeLists.txt  category.cpp
test/variant/: CMakeLists.txt  lifetime.cpp  special_members.cpp  swap.cpp  template.cpp
test/variant/variant.assign/: CMakeLists.txt  assign.cpp
test/variant/variant.bad.access/: CMakeLists.txt  bad_variant_access.cpp
test/variant/variant.ctor/: CMakeLists.txt  converting.cpp  default.cpp
test/variant/variant.get/: CMakeLists.txt  get.cpp  holds_alternative.cpp
test/variant/variant.hash/: CMakeLists.txt  monostate.cpp  variant.cpp
test/variant/variant.helper/: CMakeLists.txt  variant_alternative.cpp  variant_npos.cpp  variant_size.cpp
test/variant/variant.visit/: CMakeLists.txt  forwarding_visitor.h  incomplete.cpp  value_category.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
